<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="25dp"
    android:layout_marginRight="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtRoundMsg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/round"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="489dp">

        <TableRow
            android:layout_width="306dp"
            android:layout_height="26dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnUp"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="60dp"
                android:background="#4CAF50"
                android:filterTouchesWhenObscured="false"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLft"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#2196F3"
                android:textSize="24sp" />

            <Space
                android:layout_width="140dp"
                android:layout_height="140dp" />

            <Button
                android:id="@+id/btnRt"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#E91E63"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnDwn"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="#FFEB3B"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/scoreInfo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtContinues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="end"
                android:text="@string/aboutContinues"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>